sr does not need dicom files in order,fix invisible char in radiomics map

--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -1031,67 +1031,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "NH_cs3nYRV5v"
-      },
-      "outputs": [],
-      "source": [
-        "def order_dicom_files_image_position(dicom_directory: str):\n",
-        "    \"\"\"\n",
-        "    Sort DICOM files according to image position and orientation.\n",
-        "\n",
-        "    Args:\n",
-        "        dicom_directory: The directory containing the DICOM files to be sorted.\n",
-        "\n",
-        "    Returns:\n",
-        "        files_sorted: The sorted DICOM files.\n",
-        "        sop_all_sorted: The SOPInstanceUIDs in sorted order.\n",
-        "        pos_all_sorted: The image positions in sorted order.\n",
-        "    \"\"\"\n",
-        "    # Get all the files in the directory\n",
-        "    files = [os.path.join(dicom_directory, f) for f in os.listdir(dicom_directory)]\n",
-        "\n",
-        "    num_files = len(files)\n",
-        "\n",
-        "    pos_all = []\n",
-        "    sop_all = []\n",
-        "\n",
-        "    for n in range(num_files):\n",
-        "        # Read the DICOM file\n",
-        "        filename = files[n]\n",
-        "        ds = dcmread(filename)\n",
-        "\n",
-        "        # Get the ImageOrientationPatient\n",
-        "        ImageOrientation = ds.ImageOrientationPatient\n",
-        "\n",
-        "        # Get the ImagePositionPatient\n",
-        "        ImagePositionPatient = ds.ImagePositionPatient\n",
-        "\n",
-        "        # Calculate the z value\n",
-        "        x_vector = ImageOrientation[0:3]\n",
-        "        y_vector = ImageOrientation[3:]\n",
-        "        z_vector = np.cross(x_vector, y_vector)\n",
-        "\n",
-        "        # Multiply the z_vector by ImagePositionPatient\n",
-        "        pos = np.dot(z_vector, ImagePositionPatient)\n",
-        "        pos_all.append(pos)\n",
-        "\n",
-        "        # Get the SOPInstanceUID\n",
-        "        sop = ds.SOPInstanceUID\n",
-        "        sop_all.append(sop)\n",
-        "\n",
-        "    # Order the SOPInstanceUID/files by z value\n",
-        "    sorted_ind = np.argsort(pos_all)\n",
-        "    pos_all_sorted = np.array(pos_all)[sorted_ind.astype(int)]\n",
-        "    sop_all_sorted = np.array(sop_all)[sorted_ind.astype(int)]\n",
-        "    files_sorted = np.array(files)[sorted_ind.astype(int)]\n",
-        "\n",
-        "    return files_sorted, sop_all_sorted, pos_all_sorted\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "cH6G9RDcPjzs"
       },
       "outputs": [],
@@ -1115,10 +1054,7 @@
         "                                        file\n",
         "      SOPInstanceUID_seg              : SOPInstanceUID of the corresponding SEG file\n",
         "      seg_file                        : filename of SEG DCM file\n",
-        "      dcm_directory                   : ct directory that will be sorted in\n",
-        "                                        terms of axial ordering according to the\n",
-        "                                        ImagePositionPatient and ImageOrientation\n",
-        "                                        fields\n",
+        "      dcm_directory                   : ct directory\n",
         "      segments_code_mapping_df        : dataframe that holds the names of the\n",
         "                                        segments and the associated code values etc.\n",
         "      features_code_mapping_df        : dataframe that holds the names of the\n",
@@ -1137,13 +1073,7 @@
         "\n",
         "    pyradiomics_version_number = str(radiomics.__version__)\n",
         "\n",
-        "    # --- Sort the dcm files first according to --- #\n",
-        "    # --- ImagePositionPatient and ImageOrientation --- #\n",
-        "\n",
-        "    files_sorted, sop_all_sorted, pos_all_sorted = order_dicom_files_image_position(\n",
-        "        dcm_directory\n",
-        "    )\n",
-        "    files_sorted = [os.path.basename(f) for f in files_sorted]\n",
+        "    image_library= [os.path.basename(f) for f in os.listdir(dcm_directory)]\n",
         "\n",
         "    # --- Create the header for the json --- #\n",
         "\n",
@@ -1162,7 +1092,7 @@
         "\n",
         "    inputMetadata[\"compositeContext\"] = [seg_file]\n",
         "\n",
-        "    inputMetadata[\"imageLibrary\"] = files_sorted\n",
+        "    inputMetadata[\"imageLibrary\"] = image_library\n",
         "    inputMetadata[\"observerContext\"] = {\n",
         "        \"ObserverType\": \"DEVICE\",\n",
         "        \"DeviceObserverName\": \"pyradiomics\",\n",
