fix notebooks and other minor changes after repo reorg

--- a/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
@@ -2,12 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
+      "metadata": {},
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/Cloud-Resources-Workflows/blob/main/Notebooks/Totalsegmentator/Preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -23,10 +20,8 @@
         "The steps are:\n",
         "\n",
         "1. **Filter out localizer and inconsistent series**. Run an SQL query to exclude series that are localizer scans or have geometric inconsistencies from the cohort of interest.\n",
-        "2. **Extract the AWS URLs of the series**. The IDC buckets store the DICOM images at the series level, (i.e a reference to the series folder is enough, and there is no need to get the location of each SOPInstance's url) so the AWS URL of each series is the only input required for the workflow. However, you can also include other attributes that may help you organize or filter the data. The `s5cmdurl` column of the resulting table contains the command that can be used with `s5cmd` to download the series. Note: The query configures downloading the series to the `idc_data` folder by default, as this folder is cleaned after processing each series in the notebooks. You can change the destination folder if needed by modifying the sql query.\n",
-        "3. **Split the cohort into chunks**. Create manifests of 12 series each, so you can leverage Terra's parallel computing capabilities and run the workflow across thousands of VMs on Terra. Note: Rawls, the underlying engine of Terra, can run up to 3000 jobs and up to 28800 tasks (a job may contain multiple tasks) at a time.\n",
-        "4. **Copy the manifests to the Terra workspace bucket**. Use the `gsutil` command to copy the manifests from your local machine to the bucket associated with your Terra workspace.\n",
-        "5. **Generate a Terra datatable**. Use the manifests and the AWS URLs of the series to create a datatable that has the inputs for the TotalSegmentatortwoVmWorkflowOnTerra. The datatable should have one row per series and one column per input parameter.\n",
+        "3. **Split the cohort into chunks**. Create batches of 12 series  (assigning 12 series per VM), so you can leverage Terra's parallel computing capabilities efficiently and run the workflow across thousands of VMs on Terra. Note: Rawls, the underlying engine of Terra, can run up to 3000 jobs and up to 28800 tasks (a job may contain multiple tasks) at a time.\n",
+        "5. **Generate a Terra datatable**. Each row of datatable will have the batchid and list of seriesInstanceuids in a yaml form amenable to be passed to papermill\n",
         "\n"
       ]
     },
@@ -47,8 +42,7 @@
       },
       "outputs": [],
       "source": [
-        "project_id='my-test-project'\n",
-        "terra_workspace_bucket__folder_url='gs://my-test-terra-workspace-bucket/nlst-121523'"
+        "#project_id='my-test-project'"
       ]
     },
     {
@@ -66,11 +60,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "K1xYbz8CK5gZ",
-        "outputId": "6223aee6-0471-4f4f-dd42-73d68b3f7288"
+        "id": "K1xYbz8CK5gZ"
       },
       "outputs": [],
       "source": [
@@ -90,26 +80,18 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "a4t3HJSKLcQs",
-        "outputId": "5a85c5f6-c2fa-47c9-85ba-8a4722dd543d"
+        "id": "a4t3HJSKLcQs"
       },
       "outputs": [],
       "source": [
-        "!wget https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/sqlQueries/nlstCohort.sql"
+        "!wget https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/sqlQueries/nlstCohort.sql"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PDaww2epJUef",
-        "outputId": "2532839a-85d0-4b43-8691-2224e0c88e25"
+        "id": "PDaww2epJUef"
       },
       "outputs": [],
       "source": [
@@ -151,12 +133,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 964
-        },
-        "id": "9-o79VfxlZfQ",
-        "outputId": "6ce1d2e8-22e4-452e-ef2d-13b1a15cb902"
+        "id": "9-o79VfxlZfQ"
       },
       "outputs": [],
       "source": [
@@ -174,12 +151,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 964
-        },
-        "id": "1BD5fGfInGe6",
-        "outputId": "68d9c483-467f-46a8-9103-1e23d4dde909"
+        "id": "1BD5fGfInGe6"
       },
       "outputs": [],
       "source": [
@@ -191,25 +163,18 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "87O2LPHzqiOo"
+        "id": "xknI9qo3RqQz"
       },
       "outputs": [],
       "source": [
-        "try:\n",
-        "    shutil.rmtree(f'urls')\n",
-        "except OSError:\n",
-        "    pass\n",
-        "os.makedirs('urls')\n",
-        "\n",
-        "\n",
         "# Set the number of rows per file\n",
-        "rows_per_file = 12\n",
+        "series_per_batch = 12\n",
         "\n",
         "# Calculate the number of files needed\n",
-        "num_files = math.ceil(len(df) / rows_per_file)\n",
+        "num_files = math.ceil(len(df) / series_per_batch)\n",
         "\n",
         "# Split the dataframe into multiple dataframes\n",
-        "dfs = [df[i*rows_per_file:(i+1)*rows_per_file] for i in range(num_files)]\n",
+        "dfs = [df[i*series_per_batch:(i+1)*series_per_batch] for i in range(num_files)]\n",
         "\n",
         "# Get the current date and time formatted with underscores up to minutes\n",
         "now = datetime.now().strftime('%Y_%m_%d_%H_%M')\n",
@@ -218,15 +183,14 @@
         "batch_id_column = f'entity:twoVM_{now}_id'\n",
         "\n",
         "# Create a new dataframe to store the batch information\n",
-        "batch_df = pd.DataFrame(columns=[batch_id_column, 'dicomToNiftiConverterTool', 's5cmd_url', 'dicomSegAndSRcpu', 'dicomSegAndSRram'])\n",
+        "batch_df = pd.DataFrame(columns=[batch_id_column, 'SeriesInstanceUIDs', 'idc-version', 'dicomSegAndSRcpu', 'dicomSegAndSRram'])\n",
+        "\n",
+        "# Analyze each file and add a row to the batch dataframe\n",
+        "import json\n",
         "\n",
         "# Analyze each file and add a row to the batch dataframe\n",
         "for i, df in enumerate(dfs):\n",
         "    max_sopinstancecount = df['sopInstanceCount'].max()\n",
-        "    filename = f'urls/batch_{i+1}.csv'\n",
-        "    url_suffix = f'batch_{i+1}.csv'\n",
-        "    df.to_csv(filename, index=False)\n",
-        "    s5cmd_url = f'{terra_workspace_bucket__folder_url}/{url_suffix}'\n",
         "\n",
         "    if max_sopinstancecount >= 300:\n",
         "        cpu = 8\n",
@@ -235,64 +199,80 @@
         "        cpu = 4\n",
         "        ram = 16\n",
         "\n",
+        "    # Create a list of seriesInstanceuids for this batch\n",
+        "    series_list = df['SeriesInstanceUID'].tolist()\n",
+        "\n",
+        "    # Format the series list as a JSON dictionary\n",
+        "    json_series_dict = json.dumps({\"SeriesInstanceUIDs\": series_list})\n",
+        "\n",
+        "    # Create a new row with the batch information and the series list\n",
         "    new_row = pd.DataFrame({\n",
         "        batch_id_column: [i+1],\n",
-        "        'dicomToNiftiConverterTool': ['dcm2niix'],\n",
-        "        's5cmd_url': [s5cmd_url],\n",
+        "        'SeriesInstanceUIDs': [json_series_dict],\n",
         "        'dicomSegAndSRcpu': [cpu],\n",
-        "        'dicomSegAndSRram': [ram]\n",
+        "        'dicomSegAndSRram': [ram],\n",
+        "        'idc-version': 'v17'\n",
         "    })\n",
-        "    batch_df = pd.concat([batch_df, new_row], ignore_index=True)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 597
-        },
-        "id": "THk0oLDol4A3",
-        "outputId": "933f945e-73fa-4ed0-ac37-c39d1c93e9fe"
-      },
-      "outputs": [],
-      "source": [
-        "batch_df.to_csv(f'terra_data_table_manifest_{now}.tsv', sep='\\t', index=False)\n",
+        "    # Add the new row to the batch dataframe\n",
+        "    batch_df = pd.concat([batch_df, new_row], ignore_index=True)\n",
+        "\n",
+        "\n",
+        "\n",
         "batch_df"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "X_Civfd1ciHp"
+        "id": "MQP6BC9heDgE"
       },
+      "outputs": [],
       "source": [
-        "##**Copy files to terra workspace bucket**\n",
-        "A folder need not be created first. gsutil automatically creates the destination folder if not present\n"
+        "# Import the necessary library\n",
+        "import os\n",
+        "\n",
+        "# Set the directory for the manifests\n",
+        "manifests_dir = 'manifests'\n",
+        "\n",
+        "# Make sure the directory exists\n",
+        "os.makedirs(manifests_dir, exist_ok=True)\n",
+        "\n",
+        "# Write each batch to a separate CSV file\n",
+        "for i, batch in enumerate(batch_df.iterrows()):\n",
+        "    # Get the batch data\n",
+        "    batch_data = batch[1]\n",
+        "\n",
+        "    # Convert the Series to a DataFrame and transpose it\n",
+        "    batch_data_df = pd.DataFrame(batch_data).T\n",
+        "\n",
+        "    # Create the filename\n",
+        "    filename = os.path.join(manifests_dir, f'batch_{i+1}.csv')\n",
+        "\n",
+        "    # Write the batch data to a CSV file\n",
+        "    batch_data_df.to_csv(filename, index=False)\n",
+        "\n",
+        "batch_data_df"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Vz-s_fsbaa15"
+        "id": "THk0oLDol4A3"
       },
       "outputs": [],
       "source": [
-        "!gsutil -m cp -r urls/* $terra_workspace_bucket__folder_url"
+        "batch_df.to_csv(f'terra_data_table_manifest_{now}.tsv', sep='\\t', index=False)"
       ]
     }
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyMnEbhYRfzpmRq46bkrc5v2",
       "collapsed_sections": [
         "X_Civfd1ciHp",
         "w1mv3rg8e7Tv"
       ],
-      "include_colab_link": true,
-      "mount_file_id": "1Pwo3GrVLSLebAKPRxqd0jKZqRu7YYmQ8",
       "provenance": []
     },
     "kernelspec": {
