fix minor errors in radiomics notebook

--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -1095,7 +1095,7 @@
         "        A boolean indicating whether the radiomics feature extraction failed.\n",
         "    \"\"\"\n",
         "    # Define the path to the output file\n",
-        "    output_file_path = \"radiomics/{series_id}/{series_id}_radiomics.json\"\n",
+        "    output_file_path = os.path.join('radiomics',series_id, f\"{series_id}_radiomics.json\")\n",
         "\n",
         "    try:\n",
         "        # Check if the output file exists\n",
@@ -1476,14 +1476,18 @@
         "        # Configure DICOM segmentation\n",
         "        dicom_seg_config(series_id, series_number)\n",
         "\n",
+        "        start_time= time.time()\n",
         "        # Create DICOM segmentation using dcmqi\n",
         "        create_dicom_seg_dcmqi(series_id)\n",
+        "        itkimage2segimage_time = time.time() - start_time\n",
         "\n",
         "        # Verify DICOM segmentation creation\n",
         "        verify_dicom_seg_creation(series_id)\n",
         "\n",
+        "        start_time= time.time()\n",
         "        # Setup and trigger extraction of radiomics features for all labels\n",
         "        setup_and_trigger_extraction_of_radiomics_features_all_labels(series_id)\n",
+        "        radiomics_time = time.time()- start_time\n",
         "\n",
         "        # Verify radiomics feature extraction\n",
         "        verify_radiomics_extraction(series_id)\n",
@@ -1563,11 +1567,15 @@
         "        archiving_time = time.time() - start_time\n",
         "\n",
         "        log = pd.DataFrame({\"SeriesInstanceUID\": [series_id]})\n",
+        "        log[\"itkimage2segimage_time\"] = itkimage2segimage_time\n",
+        "        log[\"radiomics_time\"] = radiomics_time\n",
         "        log[\"archiving_time\"] = archiving_time\n",
         "        log[\"structuredReportsGenerationTime\"] = structured_reports_generation_time\n",
         "\n",
         "    else:\n",
         "        log = pd.DataFrame({\"SeriesInstanceUID\": [series_id]})\n",
+        "        log[\"itkimage2segimage_time\"] = 0\n",
+        "        log[\"radiomics_time\"] = 0\n",
         "        log[\"archiving_time\"] = 0\n",
         "        log[\"structuredReportsGenerationTime\"] = 0\n",
         "\n",
