remove extra prints, add dcmtk install cell

--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -640,17 +640,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!dcm2niix -help"
-      ],
-      "metadata": {
-        "id": "iZGlfpxlkb_3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "whJ5vtbiQQvO"
@@ -1214,8 +1203,6 @@
         "    measurement_across_segments_combined = []\n",
         "\n",
         "    for segment_id in range(0, num_segments):\n",
-        "\n",
-        "        print(\"processing segment \"+str(segment_id))\n",
         "\n",
         "        ReferencedSegment = int(\n",
         "            radiomics_features[\"seg_segment_number\"].values[segment_id]\n",
@@ -1790,6 +1777,32 @@
         "!lz4 runtime.csv dicomsegAndRadiomicsSR_UsageMetrics.lz4\n",
         "runtime_stats"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **WIP: DCMTK install**\n",
+        "\n",
+        "Unfortunately, even after setting the path for the dictionary, `dsrdump` segfaults. Not sure why."
+      ],
+      "metadata": {
+        "id": "xFxgXFp_oGij"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 'google.colab' in sys.modules:\n",
+        "  !cd /content && wget https://github.com/DCMTK/dcmtk/releases/download/DCMTK-3.6.6/dcmtk-3.6.6.tar.gz\n",
+        "  !bunzip dcmtk-3.6.6.tar.gz\n",
+        "  !tar -xvf dcmtk-3.6.6.tar\n",
+        "  !export DCMDICTPATH=/content/dcmtk-3.6.8-linux-x86_64-static/share/dcmtk-3.6.8/acrnema.dic"
+      ],
+      "metadata": {
+        "id": "dQL6eDKeoHe7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
