remove dcmtk cell and add colab link

--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -3,6 +3,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EHS1DmzV54av"
       },
       "source": [
@@ -1777,32 +1786,6 @@
         "!lz4 runtime.csv dicomsegAndRadiomicsSR_UsageMetrics.lz4\n",
         "runtime_stats"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **WIP: DCMTK install**\n",
-        "\n",
-        "Unfortunately, even after setting the path for the dictionary, `dsrdump` segfaults. Not sure why."
-      ],
-      "metadata": {
-        "id": "xFxgXFp_oGij"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if 'google.colab' in sys.modules:\n",
-        "  !cd /content && wget https://github.com/DCMTK/dcmtk/releases/download/DCMTK-3.6.6/dcmtk-3.6.6.tar.gz\n",
-        "  !bunzip dcmtk-3.6.6.tar.gz\n",
-        "  !tar -xvf dcmtk-3.6.6.tar\n",
-        "  !export DCMDICTPATH=/content/dcmtk-3.6.8-linux-x86_64-static/share/dcmtk-3.6.8/acrnema.dic"
-      ],
-      "metadata": {
-        "id": "dQL6eDKeoHe7"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
