reconfigure cwl files and use yaml manifests for sbcgc

--- a/workflows/TotalSegmentator/Notebooks/PostProcessingTerra.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/PostProcessingTerra.ipynb
@@ -2,10 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
+      "metadata": {},
       "source": [
         "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/PostProcessingTerra.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
@@ -132,7 +129,7 @@
       },
       "outputs": [],
       "source": [
-        "data= pd.read_table('twoVM_2023_06_10_00_22.tsv')\n",
+        "data= pd.read_table('twoVM_2024_01_12.tsv')\n",
         "data"
       ]
     },
@@ -162,22 +159,56 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "796xToVj0hfQ"
+        "id": "9XdS3vGuf_B4"
       },
       "outputs": [],
       "source": [
-        "destination_bucket_name='total_segmentator_nlst_sample_061023'"
+        "!wget \"https://github.com/peak/s5cmd/releases/download/v2.2.2/s5cmd_2.2.2_Linux-64bit.tar.gz\"\n",
+        "!tar -xvzf \"s5cmd_2.2.2_Linux-64bit.tar.gz\"\\\n",
+        "&& rm \"s5cmd_2.2.2_Linux-64bit.tar.gz\"\\\n",
+        "&& mv s5cmd /usr/local/bin/s5cmd\\\n",
+        "&& rm CHANGELOG.md LICENSE README.md"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
+        "id": "5XVHctV1iCO3"
+      },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "# Check if the .aws directory exists, and if not, create it\n",
+        "aws_dir = os.path.expanduser('~/.aws')\n",
+        "if not os.path.exists(aws_dir):\n",
+        "    os.makedirs(aws_dir)\n",
+        "\n",
+        "# Now, try writing to the credentials file\n",
+        "credentials_file = os.path.join(aws_dir, 'credentials')\n",
+        "with open(credentials_file, 'w') as f:\n",
+        "    f.write('[default]\\n')\n",
+        "    f.write('aws_access_key_id=\\n')\n",
+        "    f.write('aws_secret_access_key=')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "796xToVj0hfQ"
+      },
+      "outputs": [],
+      "source": [
+        "destination_bucket_name='total_segmentator_nlst_sample_011224'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
         "id": "ffGIRZ1V8wNO",
-        "outputId": "2e371f41-ddb6-4158-ddfb-d34769b83ab7",
         "scrolled": true
       },
       "outputs": [],
@@ -191,11 +222,14 @@
         "      pass\n",
         "    try:\n",
         "        os.mkdir(f'dicom_seg_objects')\n",
-        "        !gsutil cp {url} . > /dev/null 2>&1\n",
-        "        !lz4 -d --rm dicomsegAndRadiomicsSR_DICOMsegFiles.tar.lz4 -c | tar --strip-components=1  -xvf - > /dev/null 2>&1\n",
+        "        s3_url = url.replace('gs://', 's3://')\n",
+        "        !s5cmd --endpoint-url https://storage.googleapis.com cp --show-progress {s3_url} .\n",
+        "        !lz4 -d --rm dicomsegAndRadiomicsSR_DICOMsegFiles.tar.lz4 -c | tar --strip-components=0  -xvf - > /dev/null 2>&1\n",
         "        !find ./itkimage2segimage -name '*.dcm.lz4' -exec mv -t dicom_seg_objects {} + > /dev/null 2>&1\n",
         "        !lz4 -d -m --rm \"dicom_seg_objects\"/*.lz4 > /dev/null 2>&1\n",
-        "        !gsutil -m cp -r dicom_seg_objects/* gs://$destination_bucket_name/DICOM_SEGS/ > /dev/null 2>&1\n",
+        "        #!gsutil -m cp -r dicom_seg_objects/* gs://$destination_bucket_name/DICOM_SEGS/ > /dev/null 2>&1\n",
+        "        !s5cmd --endpoint-url https://storage.googleapis.com cp --show-progress \"dicom_seg_objects/*\" \"s3://$destination_bucket_name/DICOM_SEGS/\"\n",
+        "\n",
         "    except Exception as e:\n",
         "        print(f'Error processing {url}: {e}')\n",
         "        traceback.print_exc()\n",
@@ -229,11 +263,11 @@
       "execution_count": null,
       "metadata": {
         "id": "LV3a-LPbrDyb",
-        "outputId": "7a32f37a-6abb-40c3-8b42-29efce91983f",
         "scrolled": true
       },
       "outputs": [],
       "source": [
+        "import subprocess\n",
         "series_df = pd.DataFrame(columns=['series_id'])\n",
         "\n",
         "batch_count = 1  # Counter for batch folders\n",
@@ -247,11 +281,13 @@
         "        pass\n",
         "    os.mkdir(f'decompressedStructuredReportsDICOM')\n",
         "    try:\n",
-        "        !gsutil cp {url} . > /dev/null 2>&1\n",
-        "        !lz4 -d --rm structuredReportsDICOM.tar.lz4 -c | tar --strip-components=1 -xvf - > /dev/null 2>&1\n",
+        "        s3_url = url.replace('gs://', 's3://')\n",
+        "        print(s3_url)\n",
+        "        !s5cmd --endpoint-url https://storage.googleapis.com cp {s3_url} .\n",
+        "        !lz4 -d --rm structuredReportsDICOM.tar.lz4 -c | tar --strip-components=0 -xvf - > /dev/null 2>&1\n",
         "        !find ./structuredReportsDICOM -name '*.dcm.lz4' -exec mv -t decompressedStructuredReportsDICOM {} + > /dev/null 2>&1\n",
         "        !lz4 -d -m --rm \"decompressedStructuredReportsDICOM\"/*.lz4 > /dev/null 2>&1\n",
-        "        !gsutil -m cp -r decompressedStructuredReportsDICOM/* gs://$destination_bucket_name/decompressedStructuredReportsDICOM/batch_{batch_count}/ > /dev/null 2>&1\n",
+        "        !s5cmd --endpoint-url https://storage.googleapis.com cp --show-progress \"decompressedStructuredReportsDICOM/*\" \"s3://$destination_bucket_name/decompressedStructuredReportsDICOM/batch_{batch_count}/\"\n",
         "\n",
         "        # Find all series IDs and add them to the DataFrame\n",
         "        series_ids = [filename.split('_')[0] for filename in os.listdir('decompressedStructuredReportsDICOM')]\n",
@@ -291,7 +327,6 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": []
     },
     "kernelspec": {
