--- a/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
@@ -2,7 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "d-VtREb7d77t"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
@@ -42,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "#project_id='my-test-project'"
+        "project_id='my-test-project'"
       ]
     },
     {
@@ -151,22 +153,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1BD5fGfInGe6"
-      },
-      "outputs": [],
-      "source": [
-        "df['projected_batch_number']=np.ceil((df.index + 1) / 12)\n",
-        "df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "xknI9qo3RqQz"
       },
       "outputs": [],
       "source": [
+        "import pandas as pd\n",
+        "import math\n",
+        "from datetime import datetime\n",
+        "import os\n",
+        "import yaml\n",
+        "import json\n",
+        "\n",
         "# Set the number of rows per file\n",
         "series_per_batch = 12\n",
         "\n",
@@ -179,28 +176,35 @@
         "# Get the current date and time formatted with underscores up to minutes\n",
         "now = datetime.now().strftime('%Y_%m_%d_%H_%M')\n",
         "\n",
+        "# Set the directory for the manifests\n",
+        "manifests_dir = 'manifests'\n",
+        "\n",
+        "# Make sure the directory exists\n",
+        "os.makedirs(manifests_dir, exist_ok=True)\n",
+        "\n",
         "# Create a new column name for the batch_id column\n",
         "batch_id_column = f'entity:twoVM_{now}_id'\n",
         "\n",
         "# Create a new dataframe to store the batch information\n",
         "batch_df = pd.DataFrame(columns=[batch_id_column, 'SeriesInstanceUIDs', 'idc-version', 'dicomSegAndSRcpu', 'dicomSegAndSRram'])\n",
         "\n",
-        "# Analyze each file and add a row to the batch dataframe\n",
-        "import json\n",
+        "# Create a list to store YAML-formatted SeriesInstanceUIDs\n",
+        "yaml_series_list = []\n",
         "\n",
         "# Analyze each file and add a row to the batch dataframe\n",
-        "for i, df in enumerate(dfs):\n",
-        "    max_sopinstancecount = df['sopInstanceCount'].max()\n",
-        "\n",
-        "    if max_sopinstancecount >= 300:\n",
-        "        cpu = 8\n",
-        "        ram = 32\n",
-        "    else:\n",
-        "        cpu = 4\n",
-        "        ram = 16\n",
-        "\n",
+        "for i, df_batch in enumerate(dfs):\n",
         "    # Create a list of seriesInstanceuids for this batch\n",
-        "    series_list = df['SeriesInstanceUID'].tolist()\n",
+        "    series_list = df_batch['SeriesInstanceUID'].tolist()\n",
+        "\n",
+        "    # Create a dictionary with the key 'SeriesInstanceUIDs'\n",
+        "    data_dict = {'SeriesInstanceUIDs': series_list}\n",
+        "\n",
+        "    # Create the filename for the YAML file\n",
+        "    yaml_filename = os.path.join(manifests_dir, f'batch_{i+1}.yaml')\n",
+        "\n",
+        "    # Write the dictionary to a YAML file\n",
+        "    with open(yaml_filename, 'w') as yaml_file:\n",
+        "        yaml.dump(data_dict, yaml_file)\n",
         "\n",
         "    # Format the series list as a JSON dictionary\n",
         "    json_series_dict = json.dumps({\"SeriesInstanceUIDs\": series_list})\n",
@@ -216,43 +220,8 @@
         "    # Add the new row to the batch dataframe\n",
         "    batch_df = pd.concat([batch_df, new_row], ignore_index=True)\n",
         "\n",
-        "\n",
-        "\n",
+        "# Display the final batch_df\n",
         "batch_df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MQP6BC9heDgE"
-      },
-      "outputs": [],
-      "source": [
-        "# Import the necessary library\n",
-        "import os\n",
-        "\n",
-        "# Set the directory for the manifests\n",
-        "manifests_dir = 'manifests'\n",
-        "\n",
-        "# Make sure the directory exists\n",
-        "os.makedirs(manifests_dir, exist_ok=True)\n",
-        "\n",
-        "# Write each batch to a separate CSV file\n",
-        "for i, batch in enumerate(batch_df.iterrows()):\n",
-        "    # Get the batch data\n",
-        "    batch_data = batch[1]\n",
-        "\n",
-        "    # Convert the Series to a DataFrame and transpose it\n",
-        "    batch_data_df = pd.DataFrame(batch_data).T\n",
-        "\n",
-        "    # Create the filename\n",
-        "    filename = os.path.join(manifests_dir, f'batch_{i+1}.csv')\n",
-        "\n",
-        "    # Write the batch data to a CSV file\n",
-        "    batch_data_df.to_csv(filename, index=False)\n",
-        "\n",
-        "batch_data_df"
       ]
     },
     {
