--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -316,10 +316,10 @@
       "source": [
         "### **Initialize IDC Client**\n",
         "\n",
-        "We use idc-client pypi package to handle downloading data from IDC.\n",
+        "We use idc-index pypi package to handle downloading data from IDC.\n",
         "In this notebook, we are using version 0.2.8 which contains the index from idc version 17\n",
         "\n",
-        "Learn more about idc-index at ttps://github.com/ImagingDataCommons/idc-index"
+        "Learn more about idc-index at https://github.com/ImagingDataCommons/idc-index"
       ]
     },
     {
